# fastapi-playground

./: .gitignore  docker-compose.yml  pyproject.toml  test_api.py
docs/: alembic_migration_fix_plan.md  coverage_improvement_guide.md  implementation_checklist.md  transactional_implementation_retrospective.md  transactional_usage_guide.md
examples/: sqlalchemy_relationship_patterns.py
persistence/: alembic.ini
persistence/migrations/: env.py
persistence/migrations/versions/: 0001_add_user_table.py  0001_migration_0001.py  0003_update_userinfo_foreign_key_cascade.py
src/fastapi_playground_poc/: __init__.py  __main__.py  app.py  config.py  courses_routes.py  db.py  exception_handlers.py  main.py  startup.py  transactional.py  user_routes.py
src/fastapi_playground_poc/application/web/controller/: courses_routes.py  user_routes.py
src/fastapi_playground_poc/application/web/service/: course_service.py  user_service.py
src/fastapi_playground_poc/domain/: exceptions.py
src/fastapi_playground_poc/domain/model/: Course.py  Enrollment.py  User.py  UserInfo.py
src/fastapi_playground_poc/infrastructure/: exception_handlers.py  startup.py  transactional.py
src/fastapi_playground_poc/infrastructure/alembic/migrations/: env.py
src/fastapi_playground_poc/infrastructure/alembic/migrations/versions/: 0005_remove_userinfo_cascade.py
src/fastapi_playground_poc/models/: Course.py  Enrollment.py  User.py  UserInfo.py
src/fastapi_playground_poc/persistence/migrations/: env.py
src/fastapi_playground_poc/persistence/migrations/versions/: 0004_add_courses_and_enrollments.py
src/fastapi_playground_poc/services/: __init__.py  course_service.py  exceptions.py  user_service.py
src/flask_playground_poc/: __init__.py  __main__.py  app.py  courses_routes.py  db.py  exception_handlers.py  main.py  schemas.py  transactional.py  user_routes.py
src/flask_playground_poc/models/: Course.py  Enrollment.py  User.py  UserInfo.py
src/flask_playground_poc/persistence/migrations/versions/: 0002_add_userinfo.py
test/: __init__.py  conftest.py  test_config.py  test_coverage_debug.py  test_db_spy_coverage.py  test_exception_handlers.py  test_final_autoincrement_solution.py  test_transactional.py  test_transactional_base.py  test_transactional_postgresql.py  test_transactional_sqlite.py
test/test_endpoints/: __init__.py  test_course_routes.py  test_user_routes.py
test/test_integration/: test_workflows.py
test/test_services/: __init__.py  test_course_service.py  test_user_service.py
tests/: __init__.py  conftest.py  test_config.py  test_coverage_debug.py  test_db_spy_coverage.py  test_direct_route_coverage.py  test_exception_handlers.py  test_precise_coverage.py  test_simple_coverage_debug.py  test_targeted_coverage.py  test_targeted_line_coverage.py  test_transactional.py  test_transactional_base.py  test_transactional_postgresql.py  test_transactional_sqlite.py
tests/test_endpoints/: __init__.py  test_course_routes.py  test_enrollment_routes.py  test_user_routes.py
tests/test_integration/: __init__.py  test_workflows.py
tests/test_services/: test_course_service.py  test_user_service.py
