[project]
name = "fastapi-playground-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Davide Pugliese", email = "deviad@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
    "typing>=3.10.0.0",
    "typing-extensions>=4.14.1",
    "uvicorn>=0.32.1",
]

[project.scripts]
fastapi-playground-poc = "fastapi_playground_poc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pip>=25.1.1",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.27.0",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra", 
    "-q",
    "--cov=src/fastapi_playground_poc", 
    "--cov-report=html", 
    "--cov-report=term-missing",
]
testpaths = ["test"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
norecursedirs = [
    "build",
    "dist",
    ".git",
    ".tox",
    "*.egg",
    "venv",
    "env",
    ".venv",
    "node_modules"
]
[tool.coverage.run]
 omit = [
    "*/fastapi_playground_poc/main.py",
    "*/fastapi_playground_poc/__main__.py",
    "src/fastapi_playground_poc/__init__.py", 
    "src/fastapi_playground_poc/startup.py",
    "*/static/"
 ]
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]